--- a/src/dark-theme.css
+++ b/src/dark-theme.css
@@ -35,8 +35,15 @@
 
 .text-area {
     -fx-control-inner-background: #222;
-    -fx-text-fill: white;
 }
+
+.textflow-style {
+    -fx-background-color: #f0f0f0;
+    -fx-border-color: black;
+    -fx-border-width: 2;
+    -fx-padding: 10;
+}
+
 
 .table-view {
     -fx-base: #2b2b2b;
@@ -70,3 +77,50 @@
 .scroll-bar .thumb {
     -fx-background-color: #3c3f41;
 }
+
+/* Style général des TabPane */
+.tab-pane {
+    -fx-background-color: #1E1E1E; /* Fond général */
+}
+
+/* En-tête des onglets */
+.tab-pane .tab-header-background {
+    -fx-background-color: #1E1E1E; /* Fond des en-têtes */
+}
+
+/* Style des onglets non sélectionnés */
+.tab {
+    -fx-background-color: #2E2E2E;
+    -fx-text-base-color: #FFFFFF;
+}
+
+/* Style de l'onglet sélectionné */
+.tab:selected {
+    -fx-background-color: #424242;
+    -fx-text-base-color: #FFFFFF;
+}
+
+/* Style des ScrollPane */
+.tab-pane .scroll-pane {
+    -fx-background-color: #343434; /* Fond du ScrollPane */
+}
+
+
+.scroll-pane > .viewport {
+    -fx-background-color: transparent; /* Fond du viewport */
+}
+
+/* Style des barres de défilement */
+.scroll-bar {
+    -fx-background-color: #1E1E1E; /* Fond des barres de défilement */
+}
+
+.scroll-bar .thumb {
+    -fx-background-color: #3E3E3E; /* Curseur des barres de défilement */
+}
+
+.scroll-bar .thumb:hover {
+    -fx-background-color: #4E4E4E; /* Curseur au survol */
+}
+
+
