--- a/src/dark-theme.css
+++ b/src/dark-theme.css
@@ -2,3 +2,25 @@
     -fx-background-color: #2b2b2b;
     -fx-fill: white;
 }
+
+.scroll-pane {
+    -fx-background-color: transparent;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+
+.scroll-bar:vertical .thumb {
+    -fx-background-color: #331b36;
+}
+
+.scroll-bar:vertical .track {
+    -fx-background-color: transparent;
+}
+
+.scroll-bar:horizontal .thumb {
+    -fx-background-color: #331b36;
+}
+
+.scroll-bar:horizontal .track {
+    -fx-background-color: transparent;
+}
